[gd_scene load_steps=9 format=3 uid="uid://mq7pvven25pn"]

[ext_resource type="Script" uid="uid://cwiswhjccehap" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://ct8qrjms6pfw6" path="res://assets/textures/bg.png" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://gh6t2kb6rapw" path="res://scenes/hud.tscn" id="2_iywne"]
[ext_resource type="PackedScene" uid="uid://qjfbq4lu3xxe" path="res://scenes/player.tscn" id="2_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dw5nnj8vtxc0u" path="res://scenes/enemy_spawner.tscn" id="4_lbhrr"]
[ext_resource type="AudioStream" uid="uid://bk4k0a0p8v0ed" path="res://assets/audio/hit.wav" id="6_p57ef"]
[ext_resource type="AudioStream" uid="uid://uqr5bpil1bf3" path="res://assets/audio/explode.wav" id="7_u5sy4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnu2h"]
size = Vector2(150, 863)

[node name="Game" type="Node"]
script = ExtResource("1_lbhrr")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_iywne")]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1288.0
offset_bottom = 733.0
texture = ExtResource("1_yqjtg")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(274, 380)

[node name="EnemySpawner" parent="." instance=ExtResource("4_lbhrr")]

[node name="Deathzone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(-294, 387.5)
shape = SubResource("RectangleShape2D_lnu2h")

[node name="EnemyHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_p57ef")

[node name="PlayerDamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_u5sy4")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
